csv-core/tests/compile_fail/algebra_completed_to_proof_building.stderr
warning: unused import: `Completed`
 --> tests/compile_fail/algebra_completed_to_proof_building.rs:6:34
  |
6 | use csv_algebra::state::{Locked, Completed};
  |                                  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `ChainId`
 --> tests/compile_fail/algebra_completed_to_proof_building.rs:7:37
  |
7 | use csv_algebra::transfer::{SealId, ChainId};
  |                                     ^^^^^^^

error[E0599]: no method named `begin_proof` found for struct `Completed` in the current scope
  --> tests/compile_fail/algebra_completed_to_proof_building.rs:27:37
   |
27 |     let _proof_building = completed.begin_proof(); // ERROR: no such method
   |                                     ^^^^^^^^^^^ method not found in `Completed`
